# outpost

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  Makefile  POST.md  README.md  docker-compose.public.yml  docker-compose.yml  hosts.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: main.py  openapi_spec.py
app/auth/: base.py  registry.py
app/auth/modules/: api_key_header.py  api_key_query.py  basic_auth.py  bearer_redis.py  bearer_static.py  custom_headers.py  hmac_signed.py  none_.py  oauth2_client_credentials.py  plugin.py
app/builtin_providers/: groww.yaml  openai.yaml  stripe.yaml  upstox.yaml
app/core/: cache.py  hosts.py  pathmatch.py  ratelimit.py
app/plugins/: groww_approval_mint.py  groww_totp_mint.py
app/providers/: loader.py  provider.py  schema.py
app/python/: main.py
app/python/auth/: registry.py
app/python/auth/modules/: api_key_header.py  api_key_query.py  basic_auth.py  bearer_redis.py  bearer_static.py  custom_headers.py  hmac_signed.py  none_.py  oauth2_client_credentials.py  plugin.py
app/python/core/: cache.py  config.py  errors.py  hosts.py
app/python/plugins/: groww_approval_mint.py  groww_totp_mint.py
app/python/providers/: loader.py  provider.py
app/ts/: .dev.vars.example  .gitignore  Dockerfile  README.md  builtin_providers  package-lock.json  package.json  tsconfig.json  wrangler.toml
app/ts/src/: bootstrap.ts  index.ts  yaml.d.ts
app/ts/src/adapter/: node.ts  workers.ts
app/ts/src/auth/: registry.ts  types.ts
app/ts/src/core/: cache.ts  cache_keys.ts  env.ts  errors.ts  hosts.ts  pathmatch.ts  ratelimit.ts  types.ts
app/ts/src/plugins/: groww_approval_mint.ts  groww_totp_mint.ts  registry.ts
app/ts/src/providers/: loader.ts  provider.ts  schema.ts
app/ts/src/storage/: cache_kv.ts  cache_redis.ts  interface.ts  kv.ts  rate_limit_kv.ts  rate_limit_redis.ts  redis.ts
app/ts/tests/: bootstrap.test.ts
app/ts/tests/auth/: bearer_redis.test.ts  hmac_signed.test.ts  plugin.test.ts  registry.test.ts  (+2 more)
docs/: MANUAL.md
outpost_cli/: __init__.py  auth_prompts.py  main.py  render.py  validators.py  wizard.py
scripts/: backup.sh  install.sh  restore.sh  status.sh  update.sh
(+20 files in other folders)
